--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,6 +1,63 @@
 .footer {
-  width: 100%;
-  height: 800px;
+  width: calc(100% - 300px);
   background-color: var(--colFooter);
   color: white;
+  padding: 0px 150px;
+  padding-bottom: 75px;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* justify-content: center; */
+}
+
+.column {
+  list-style: none;
+  font-size: 1.25rem;
+  font-weight: 300;
+  margin-right: 50px;
+  margin-top: 75px;
+}
+
+.column h1 {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 80px;
+}
+
+.column li {
+  margin-bottom: 20px;
+}
+
+.links li {
+  transition: color 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.links li:hover {
+  color: var(--colButtonsHighlight);
+}
+
+.column li:last-of-type {
+  margin-bottom: 0;
+}
+
+.email {
+  margin-top: 80px;
+  font-weight: bold;
+}
+
+.form * {
+  margin-bottom: 20px;
+}
+
+.column input {
+  border: none;
+  padding: 20px;
+}
+
+.column button {
+  display: block;
 }
