--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -7,7 +7,7 @@
   z-index: 10;
   /* background-color: white; */
   background-color: white;
-  border-bottom: solid var(--colTitles) 1px;
+  border-bottom: solid var(--colTitles) 1.5px;
 }
 
 .nav {
@@ -24,24 +24,42 @@
 }
 
 .links {
-  width: 900px;
   list-style: none;
+  font-size: 1.25rem;
   display: flex;
   flex-direction: row;
-  font-size: 1.25rem;
-  justify-content: space-evenly;
+  /* flex-wrap: wrap; */
+  margin-left: 80px;
+  /* display: grid; */
 }
 
 .links li {
   cursor: pointer;
   font-weight: bold;
   transition: color 0.2s ease-in-out;
+  margin-right: 40px;
 }
 
 .links li:hover {
   color: var(--colButtonsHighlight);
 }
 
+.dropdown {
+  font-weight: 300 !important;
+}
+
 .partner {
   height: 100%;
+  /* width: 200px;
+  object-fit: cover; */
+}
+
+@media (max-width: 1024px) {
+  .links {
+    display: none;
+  }
+
+  .partner {
+    display: none;
+  }
 }
