--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -51,16 +51,32 @@
 }
 
 @media (max-width: 1250px) {
+  .hero {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+  }
+
   .hero img {
-    display: none;
+    /* display: none; */
+    position: relative;
+    order: 2;
   }
 
   .content {
+    position: relative;
+    order: 1;
+    /* background-color: white; */
+    padding: 40px;
+    border-radius: 2px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    /* left: 50%;
+    transform: translate(-50%, -50%); */
+    transform: translate(0, 0);
+    top: 0;
+    left: 0;
   }
 
   .content h1 {
@@ -69,6 +85,17 @@
 
   .content p {
     text-align: center;
-    max-width: 100%;
+    max-width: 75%;
+    /* max-width: 450px; */
+  }
+}
+
+@media (max-width: 768px) {
+  .content h1 {
+    font-size: 2rem;
+  }
+
+  .content p {
+    font-size: 1rem;
   }
 }
