--- a/styles/Partnered.module.css
+++ b/styles/Partnered.module.css
@@ -1,5 +1,36 @@
 .partnered {
-  width: 100%;
-  height: 350px;
-  background-color: coral;
+  width: calc(100% - 300px);
+  background-color: var(--colBg);
+  padding: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+}
+
+.content h1 {
+  font-size: 3rem;
+  margin-left: 40px;
+  color: var(--colTitles);
+}
+
+.content img {
+  aspect-ratio: 1;
+  width: 180px;
+}
+
+.content div {
+
+}
+
+.partnered p {
+  max-width: 950px;
+  margin-top: 80px;
+  font-size: 1.65rem;
+  text-align: center;
+  font-weight: 300;
 }
