--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -1,5 +1,26 @@
 .services {
-  width: 100%;
-  height: 800px;
-  background-color: bisque;
+  width: calc(100% - 300px);
+  background-color: var(--colBg);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 150px;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+
+.column img {
+  margin-bottom: 80px;
+}
+
+.column p {
+  margin-bottom: 80px;
+  max-width: 650px;
 }
