--- a/styles/Stats.module.css
+++ b/styles/Stats.module.css
@@ -1,5 +1,20 @@
 .stats {
+  width: calc(100% - 300px);
+  padding: 80px 150px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.stats h1 {
+  font-size: 3rem;
+  color: var(--colButtonsHighlight);
+  text-align: center;
+  margin-bottom: 80px;
+}
+
+.stats img {
   width: 100%;
-  height: 500px;
-  background-color: cadetblue;
+  max-width: 1000px;
 }
