make everything responsive apart from header and footer

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -67,7 +67,7 @@
     position: relative;
     order: 1;
     /* background-color: white; */
-    padding: 40px;
+    padding: 80px 40px;
     border-radius: 2px;
     display: flex;
     flex-direction: column;
