--- a/styles/Endorsements.module.css
+++ b/styles/Endorsements.module.css
@@ -9,7 +9,8 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  /* grid-template-columns: repeat(4, 1fr); */
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 100px;
   /* padding: 80px 150px; */
   /* margin: 80px 0; */
@@ -20,6 +21,7 @@
 
 .grid img {
   width: 200px;
+  /* width: 100%; */
 }
 
 .endorsements h1 {
@@ -27,6 +29,8 @@
   font-size: 3rem;
   color: var(--colButtonsHighlight);
   text-align: center;
+  /* max-width: 1150px; */
+  max-width: 75%;
 }
 
 @media (max-width: 1024px) {
@@ -44,17 +48,17 @@
 }
 
 @media (max-width: 768px) {
+  .endorsements h1 {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 600px) {
   .grid {
-    /* grid-template-columns: 1fr; */
-    /* width: 75%; */
     width: auto;
   }
 
   .grid img {
     width: 100px;
-  }
-
-  .endorsements h1 {
-    font-size: 2rem;
   }
 }
