--- a/styles/Partnered.module.css
+++ b/styles/Partnered.module.css
@@ -34,3 +34,38 @@
   text-align: center;
   font-weight: 300;
 }
+
+@media (max-width: 1024px) {
+  .partnered {
+    width: 100%;
+    padding: 80px 0;
+  }
+
+  .content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .content h1 {
+    text-align: center;
+    margin-left: 0;
+  }
+
+  .content h1:first-of-type {
+    margin-top: 20px;
+  }
+
+  .partnered p {
+    max-width: 75%;
+  }
+}
+
+@media (max-width: 768px) {
+  .content h1 {
+    font-size: 2rem;
+  }
+
+  /* .partnered p {
+    max-width: 75%;
+  } */
+}
