--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -24,3 +24,26 @@
   margin-bottom: 80px;
   max-width: 650px;
 }
+
+@media (max-width: 1024px) {
+  .services {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 80px 0;
+  }
+
+  .column:first-of-type {
+    margin-bottom: 80px;
+  }
+}
+
+@media (max-width: 768px) {
+  .column img {
+    height: 200px;
+  }
+
+  .column p {
+    max-width: 75%;
+  }
+}
