--- a/styles/Stats.module.css
+++ b/styles/Stats.module.css
@@ -18,3 +18,24 @@
   width: 100%;
   max-width: 1000px;
 }
+
+@media (max-width: 1024px) {
+  .stats {
+    width: 100%;
+    padding: 80px 0;
+  }
+
+  .stats h1 {
+    max-width: 75%;
+  }
+
+  .stats img {
+    max-width: 75%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .stats h1 {
+    font-size: 2rem;
+  }
+}
