--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,15 +1,18 @@
 .footer {
-  width: calc(100% - 300px);
+  /* width: calc(100% - 300px); */
+  width: 100%;
   background-color: var(--colFooter);
   color: white;
-  padding: 0px 150px;
-  padding-bottom: 75px;
+  /* padding: 0px 150px;
+  padding-bottom: 80px; */
 }
 
 .content {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding: 0px 150px;
+  /* padding-bottom: 80px; */
   /* justify-content: center; */
 }
 
@@ -18,7 +21,7 @@
   font-size: 1.25rem;
   font-weight: 300;
   margin-right: 50px;
-  margin-top: 75px;
+  margin-top: 80px;
 }
 
 .column h1 {
@@ -29,6 +32,7 @@
 
 .column li {
   margin-bottom: 20px;
+  font-size: 1rem;
 }
 
 .links li {
@@ -55,9 +59,76 @@
 
 .column input {
   border: none;
-  padding: 20px;
+  padding: 15px 100px 15px 10px;
 }
 
 .column button {
   display: block;
+  border: solid white 2px;
+  background: none;
+  color: white;
+  padding: 10px 40px;
+  font-weight: bold;
+  font-size: 1rem;
+  font-family: 'Outfit', Arial;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+  margin-bottom: 80px;
+}
+
+.column button:hover {
+  background-color: white;
+  color: var(--colFooter);
+}
+
+.linkedin {
+  aspect-ratio: 1;
+  width: 60px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.break {
+  width: 100%;
+  height: 2px;
+  background-color: white;
+  margin-top: 120px;
+}
+
+.legal {
+  padding: 0px 150px;
+  padding-bottom: 80px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.legalLinks h1 {
+  transition: color 0.2s ease-in-out;
+  cursor: pointer;
+  margin-bottom: 20px;
+  white-space: nowrap;
+}
+
+.legalLinks h1:hover {
+  color: var(--colButtonsHighlight);
+}
+
+.disclaimer {
+  padding: 0px 150px;
+  padding-bottom: 80px;
+  max-width: 1025px;
+  font-size: 1rem;
+  line-height: 1.5em;
+  font-weight: 200;
+}
+
+@media (max-width: 1024px) {
+  .content {
+    flex-direction: column;
+  }
+
+  .legal {
+    flex-direction: column;
+  }
 }
