--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -5,9 +5,9 @@
   width: 100%;
   height: 150px;
   z-index: 10;
-  /* background-color: white; */
   background-color: white;
-  border-bottom: solid var(--colTitles) 1.5px;
+  /* border-bottom: solid var(--colTitles) 1.5px; */
+  filter: drop-shadow(0 0 0.75rem var(--colTitles));
 }
 
 .nav {
@@ -15,8 +15,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  /* justify-content: space-evenly; */
   align-items: center;
-  padding-left: 150px; 
+  padding: 0 150px; 
 }
 
 .logo {
@@ -29,7 +30,6 @@
   display: flex;
   flex-direction: row;
   /* flex-wrap: wrap; */
-  margin-left: 80px;
   /* display: grid; */
 }
 
@@ -38,6 +38,11 @@
   font-weight: bold;
   transition: color 0.2s ease-in-out;
   margin-right: 40px;
+  white-space: nowrap;
+}
+
+.links li:last-of-type {
+  margin-right: 0;
 }
 
 .links li:hover {
@@ -45,18 +50,63 @@
 }
 
 .dropdown {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown span {
   font-weight: 300 !important;
+  margin-right: 8px;
+}
+
+.dropdown img {
+  height: 10px;
+  transform: translateY(25%);
+}
+
+.nav div {
+  display: flex;
+  align-items: center;
+}
+
+.hamburger {
+  display: none;
+  margin-right: 40px;
 }
 
 .partner {
-  height: 100%;
+  width: 250px;
+  /* height: 100%; */
   /* width: 200px;
   object-fit: cover; */
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1700px) {
   .links {
     display: none;
+  }
+
+  .hamburger {
+    display: block;
+  }
+}
+
+@media (max-width: 1024px) {
+  .nav {
+    padding: 0 40px;
+  }
+
+  .logo {
+    width: 150px;
+  }
+
+  .links {
+    display: none;
+  }
+
+  .hamburger {
+    width: 40px;
+    margin-right: 0;
   }
 
   .partner {
