--- a/styles/Partnered.module.css
+++ b/styles/Partnered.module.css
@@ -1,7 +1,7 @@
 .partnered {
   width: calc(100% - 300px);
   background-color: var(--colBg);
-  padding: 150px;
+  padding: 80px 150px;
   display: flex;
   flex-direction: column;
   align-items: center;
