--- a/styles/Suppliers.module.css
+++ b/styles/Suppliers.module.css
@@ -1,3 +1,118 @@
 .suppliers {
+  position: relative;
   padding: 80px 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.suppliers h1 {
+  font-size: 3rem;
+  margin-bottom: 60px;
+  align-self: flex-start;
+}
+
+.grid {
+  display: grid;
+  /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
+  /* grid-template-columns: repeat(auto-fit, 300px); */
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  /* gap: 100px; */
+  width: 100%;
+  /* width: calc(100% - 300px); */
+  justify-items: center;
+  align-items: center;
+  margin-bottom: 60px;
+  /* background-color: lightgray; */
+}
+
+.grid div {
+  /* width: 250px; */
+  width: 100%;
+  aspect-ratio: 1.5 / 1;
+  /* border: solid lightgrey 1px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  outline: 1px solid lightgrey
+}
+
+.grid div img {
+  width: 50%;
+}
+
+.suppliers h2 {
+  font-size: 2rem;
+  color: var(--colButtonsHighlight);
+  text-align: center;
+  max-width: 45%;
+  margin-bottom: 60px;
+}
+
+.flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 65%;
+}
+
+.flex div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flex div img {
+  width: 150px;
+  /* max-width: 50%; */
+  margin-bottom: 40px;
+}
+
+.flex div p {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+@media (max-width: 1024px) {
+  .suppliers {
+    padding: 80px 40px;
+  }
+
+  .suppliers h2 {
+    max-width: 75%;
+  }
+
+  .grid {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 0.5fr));
+  }
+
+  .flex {
+    max-width: 80%;
+  }
+}
+
+@media (max-width: 768px) {
+  .grid {
+    grid-template-columns: repeat(auto-fit, minmax(125px, 0.5fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(150px, 250px)); */
+  }
+
+  .suppliers h1 {
+    font-size: 2rem;
+  }
+
+  .suppliers h2 {
+    font-size: 1.5rem;
+  }
+
+  .flex {
+    max-width: 100%;
+  }
+
+  .flex div p {
+    font-size: 1rem;
+  }
 }
