ensure contact form button doesnt go over a certain width

--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -13,3 +13,13 @@
 .button:hover {
   background-color: var(--colButtonHover);
 }
+
+.small {
+  max-width: 50%;
+}
+
+@media (max-width: 768px) {
+  .small {
+    max-width: 100%;
+  }
+}
