--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,10 +1,17 @@
 .contact {
+  /* padding: 150px 40px; */
   padding: 80px 150px;
   display: flex;
   flex-direction: column;
   max-width: 700px;
   margin: 0 auto;
 }
+
+/* .contact > div {
+  display: flex;
+  flex-direction: column;
+
+} */
 
 .contact h1 {
   color: var(--colTitles);
