--- a/styles/Endorsements.module.css
+++ b/styles/Endorsements.module.css
@@ -2,6 +2,12 @@
   width: 100%;
   padding: 80px 0;
   background-color: white;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+}
+
+.endorsements > div {
   display: flex;
   flex-direction: column;
   align-items: center;
