--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -7,6 +7,10 @@
   padding-bottom: 80px; */
 }
 
+.footer > div {
+
+}
+
 .content {
   display: flex;
   flex-direction: row;
@@ -103,10 +107,12 @@
 }
 
 .break {
-  width: 100%;
+  /* width: 100%; */
   height: 2px;
   background-color: white;
   margin-top: 120px;
+  /* width: calc(100vw - 8px); */
+  /* transform: translateX(calc(-1280px / 4)); */
 }
 
 .legal {
