--- a/styles/Partnered.module.css
+++ b/styles/Partnered.module.css
@@ -1,7 +1,15 @@
 .partnered {
-  width: calc(100% - 300px);
+  /* width: calc(100% - 300px); */
   background-color: var(--colBg);
-  padding: 80px 150px;
+  /* padding: 80px 150px; */
+  padding: 150px 40px;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+}
+
+.partnered > div {
+  width: calc(100% - 80px);
   display: flex;
   flex-direction: column;
   align-items: center;
