--- a/styles/PolymerDistribution.module.css
+++ b/styles/PolymerDistribution.module.css
@@ -1,5 +1,13 @@
 .content {
-  padding: 80px 150px;
+  /* padding: 80px 150px; */
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+  padding: 150px 40px;
+}
+
+.content > div {
+  width: calc(100% - 80px);
   display: flex;
   flex-direction: column;
   align-items: center;
