--- a/styles/Suppliers.module.css
+++ b/styles/Suppliers.module.css
@@ -1,6 +1,14 @@
 .suppliers {
   position: relative;
-  padding: 80px 150px;
+  /* padding: 80px 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; */
+  padding: 80px 40px;
+}
+
+.suppliers > div {
+  width: calc(100% - 80px);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,7 +16,7 @@
 
 .suppliers h1 {
   font-size: 3rem;
-  margin-bottom: 60px;
+  margin-bottom: 80px;
   align-self: flex-start;
 }
 
@@ -19,7 +27,7 @@
   width: 100%;
   justify-items: center;
   align-items: center;
-  margin-bottom: 60px;
+  margin-bottom: 80px;
 }
 
 .grid div {
@@ -41,7 +49,7 @@
   color: var(--colButtonsHighlight);
   text-align: center;
   max-width: 75%;
-  margin-bottom: 60px;
+  margin-bottom: 80px;
 }
 
 .flex {
@@ -55,18 +63,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 80px;
 }
 
 .flex div img {
   width: 150px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .flex div p {
   font-size: 1.5rem;
   font-weight: 300;
   text-align: center;
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
 }
 
 @media (max-width: 1024px) {
