--- a/styles/Products.module.css
+++ b/styles/Products.module.css
@@ -64,6 +64,12 @@
 @media (max-width: 1024px) {
   .products {
     padding: 80px 40px;
+    /* flex-direction: column;
+    align-items: flex-start; */
+  }
+
+  .products > div {
+    max-width: calc(100% - 80px);
     flex-direction: column;
     align-items: flex-start;
   }
