--- a/styles/Team.module.css
+++ b/styles/Team.module.css
@@ -1,6 +1,11 @@
 .team {
-  padding: 80px 150px;
+  /* padding: 80px 150px; */
   /* max-width: 1280px; */
+  padding: 80px 40px;
+}
+
+.team > div {
+  width: calc(100% - 80px);
 }
 
 .team h1 {
@@ -47,9 +52,11 @@
 }
 
 .profile img {
-  width: calc((100vw - 315px - 80px) / 3);
-  /* aspect-ratio: 1; */
-  height: 450px;
+  /* width: calc((100vw - 315px - 80px) / 3); */
+  width: calc((1280px - 80px) / 3);
+  /* width: calc((100% - 80px) / 5); */
+  aspect-ratio: 1;
+  /* height: 450px; */
   object-fit: cover;
   margin-right: 40px;
 }
@@ -98,9 +105,11 @@
 }
 
 .suppProfile img {
-  width: calc((100vw - 315px - 80px) / 5);
-  /* aspect-ratio: 1; */
-  height: 265px;
+  /* width: calc((100vw - 315px - 80px) / 5); */
+  width: calc((1280px - 80px) / 5);
+  /* width: calc((100% - 80px) / 5); */
+  aspect-ratio: 1;
+  /* height: 265px; */
   object-fit: cover;
   margin-right: 20px;
 }
@@ -156,6 +165,20 @@
   width: 100% !important;
 }
 
+@media (max-width: 1440px) {
+  .profile img {
+    width: calc((100vw - 160px - 80px) / 3);
+  }
+
+  .suppProfile img {
+    width: calc((100vw - 160px - 80px) / 5);
+  }
+
+  /* .profile:nth-of-type(5) .overlay, .profile:nth-of-type(7) .overlay {
+    width: 100%;
+  } */
+}
+
 @media (max-width: 1024px) {
   .team {
     padding: 80px 40px;
@@ -176,15 +199,17 @@
 
   .profile img {
     /* width: calc(100vw - 315px); */
-    width: calc(100vw - 95px);
+    /* width: calc(100vw - 95px); */
+    width: 100%;
     margin-right: 0;
-    aspect-ratio: 1;
-    height: auto;
+    /* aspect-ratio: 1;
+    height: auto; */
   }
 
   .supplementary img {
     /* width: calc(100vw - 315px); */
-    width: calc(100vw - 95px);
+    /* width: calc(100vw - 95px); */
+    width: 100%;
     margin-right: 0;
     aspect-ratio: 1;
     height: auto;
@@ -227,8 +252,8 @@
   }
 
   .profile img {
-    width: calc(100vw - 95px);
-    margin-right: 0;
+    /* width: calc(100vw - 95px); */
+    /* margin-right: 0; */
   }
 
   .profile h2 {
@@ -236,7 +261,7 @@
   }
 
   .suppProfile img {
-    width: calc(100vw - 95px);
+    /* width: calc(100vw - 95px); */
     margin-right: 0;
     aspect-ratio: 1;
     height: auto;
