--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -8,11 +8,16 @@
 
 .hero img {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  /* top: 0;
+  left: 0; */
+  bottom: 0;
+  right: 0;
+  /* width: 100%; */
+  /* height: 100%; */
+  width: 90%;
+  height: 90%;
   object-fit: cover;
+  /* object-fit: contain; */
   pointer-events: none;
 }
 
@@ -41,6 +46,11 @@
 }
 
 @media (max-width: 1500px) {
+/* .hero img {
+  width: 100%;
+  height: 100%;
+} */
+
   .content p {
     max-width: 400px;
   }
@@ -63,6 +73,8 @@
     /* display: none; */
     position: relative;
     order: 2;
+    width: 100%;
+    height: 100%;
   }
 
   .content {
