--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 150px;
+  height: 125px;
   z-index: 10;
   background-color: white;
   /* border-bottom: solid var(--colTitles) 1.5px; */
@@ -17,16 +17,17 @@
   justify-content: space-between;
   /* justify-content: space-evenly; */
   align-items: center;
-  padding: 0 150px; 
+  padding: 0 80px; 
 }
 
 .logo {
-  width: 200px;
+  width: 175px;
   cursor: pointer;
 }
 
 .links {
   list-style: none;
+  /* font-size: 1rem; */
   font-size: 1.25rem;
   display: flex;
   flex-direction: row;
@@ -38,7 +39,8 @@
   cursor: pointer;
   font-weight: bold;
   transition: color 0.2s ease-in-out;
-  margin-right: 40px;
+  /* margin-right: 40px; */
+  margin-right: 30px;
   white-space: nowrap;
 }
 
@@ -76,13 +78,52 @@
 }
 
 .partner {
-  width: 250px;
+  width: 225px;
   /* height: 100%; */
   /* width: 200px;
   object-fit: cover; */
 }
 
-@media (max-width: 1700px) {
+/* @media (max-width: 1700px) {
+  .links {
+    display: none;
+  } 
+
+   .hamburger {
+    display: block;
+  }
+
+  .partner {
+    display: none;
+  }
+} */
+
+@media (max-width: 1535px) {
+  .links {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 1366px) {
+  .links li {
+    margin-right: 20px;
+  }
+
+  .links li:last-of-type {
+    margin-right: 0;
+  }
+
+  .logo {
+    width: 150px;
+  }
+
+  .partner {
+    width: 175px;
+  }
+}
+
+/* @media (max-width: 1024px) { */
+  @media (max-width: 1280px) {
   .links {
     display: none;
   }
@@ -94,9 +135,7 @@
   .partner {
     display: none;
   }
-}
 
-@media (max-width: 1024px) {
   .nav {
     padding: 0 40px;
   }
