--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -2,8 +2,8 @@
   position: relative;
   width: 100%;
   height: calc(100vh - 125px);
-  min-height: 700px;
-  max-height: 1400px;
+  min-height: 650px;
+  max-height: 1600px;
   background-color: var(--colBg);
 }
 
@@ -37,7 +37,7 @@
 }
 
 .content p {
-  max-width: 500px;
+  max-width: 525px;
   font-weight: 300;
   /* line-height: 50px; */
   line-height: 2em;
@@ -61,19 +61,19 @@
 }
 
 @media (max-width: 1500px) {
-/* .hero img {
-  width: 100%;
-  height: 100%;
-} */
+.hero img {
+  width: 80%;
+  /* height: 100%; */
+}
 
   .content p {
-    max-width: 400px;
+    /* max-width: 400px; */
   }
 }
 
 @media (max-width: 1400px) {
   .content p {
-    max-width: 325px;
+    /* max-width: 325px; */
   }
 }
 
