--- a/styles/Endorsements.module.css
+++ b/styles/Endorsements.module.css
@@ -1,6 +1,8 @@
 .endorsements {
   width: 100%;
-  padding: 80px 0;
+  /* padding: 80px 0; */
+  /* padding: 150px 40px; */
+  padding: 150px 0;
   background-color: white;
   /* display: flex;
   flex-direction: column;
@@ -17,7 +19,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 100px;
-  width: calc(100% - 300px);
+  /* width: calc(100% - 300px); */
+  width: 100%;
   justify-items: center;
   align-items: center;
 }
