--- a/styles/Partnered.module.css
+++ b/styles/Partnered.module.css
@@ -2,14 +2,15 @@
   /* width: calc(100% - 300px); */
   background-color: var(--colBg);
   /* padding: 80px 150px; */
-  padding: 150px 40px;
+  /* padding: 150px 40px; */
+  padding: 150px 0;
   /* display: flex;
   flex-direction: column;
   align-items: center; */
 }
 
 .partnered > div {
-  width: calc(100% - 80px);
+  /* width: calc(100% - 80px); */
   display: flex;
   flex-direction: column;
   align-items: center;
