--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -6,11 +6,12 @@
   justify-content: space-between; */
   /* padding: 150px; */
   /* width: calc(100% - 80px); */
-  padding: 150px 40px;
+  /* padding: 150px 40px; */
+  padding: 150px 0;
 }
 
 .services > div {
-  width: calc(100% - 80px);
+  /* width: calc(100% - 80px); */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
