--- a/styles/Stats.module.css
+++ b/styles/Stats.module.css
@@ -1,7 +1,8 @@
 .stats {
   /* width: calc(100% - 300px); */
   /* padding: 80px 150px; */
-  padding: 150px 40px;
+  /* padding: 150px 40px; */
+  padding: 150px 0;
   background-color: white;
   /* display: flex;
   flex-direction: column;
@@ -9,7 +10,7 @@
 }
 
 .stats > div {
-  width: calc(100% - 80px);
+  /* width: calc(100% - 80px); */
   display: flex;
   flex-direction: column;
   align-items: center;
