--- a/styles/Products.module.css
+++ b/styles/Products.module.css
@@ -8,7 +8,7 @@
 }
 
 .products > div {
-  width: width(100% - 80px);
+  width: calc(100% - 80px);
   display: flex;
   align-items: center;
 }
@@ -36,7 +36,8 @@
 }
 
 .details {
-  padding: 80px 0px;
+  /* padding: 80px 0px; */
+  padding: 80px 40px;
 }
 
 .block {
