--- a/styles/Products.module.css
+++ b/styles/Products.module.css
@@ -70,7 +70,8 @@
   }
 
   .products > div {
-    max-width: calc(100% - 80px);
+    width: 100%;
+    /* max-width: calc(100% - 80px); */
     flex-direction: column;
     align-items: flex-start;
   }
