--- a/styles/Team.module.css
+++ b/styles/Team.module.css
@@ -184,6 +184,10 @@
     padding: 80px 40px;
   }
 
+  .team > div {
+    width: 100%;
+  }
+
   .team h1, .team p {
     /* text-align: center; */
     max-width: 100%;
