--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -86,6 +86,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     /* height: auto; */
   }
 
@@ -131,6 +132,13 @@
   .hero {
     height: auto;
     min-height: calc(100vh - 125px);
+    overflow: hidden;
+  }
+
+  .hero img {
+    width: 175%;
+    object-fit: cover;
+    align-self: center;
   }
 
   .content h1 {
