--- a/styles/Products.module.css
+++ b/styles/Products.module.css
@@ -37,7 +37,8 @@
 
 .details {
   /* padding: 80px 0px; */
-  padding: 80px 40px;
+  /* padding: 80px 40px; */
+  padding: 80px 80px;
 }
 
 .block {
