--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -87,7 +87,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    /* height: auto; */
+    height: auto;
   }
 
   .hero img {
