tweak image sizes and padding

--- a/styles/Endorsements.module.css
+++ b/styles/Endorsements.module.css
@@ -26,7 +26,15 @@
 }
 
 .grid img {
-  width: 200px;
+  width: 150px;
+  /* max-height: 75px; */
+  /* height: 70%; */
+  /* max-height: 100px; */
+  /* height: 75px; */
+}
+
+.long, .inno {
+  width: 100px !important;
 }
 
 .endorsements h1 {
