--- a/styles/Products.module.css
+++ b/styles/Products.module.css
@@ -13,6 +13,10 @@
   align-items: center;
 }
 
+.details > div {
+  width: calc(100% - 80px);
+}
+
 .products h1 {
   font-size: 3rem;
   color: var(--colTitles);
@@ -38,11 +42,12 @@
 .details {
   /* padding: 80px 0px; */
   /* padding: 80px 40px; */
-  padding: 80px 80px;
+  /* padding: 80px 0px; */
+  padding: 150px 40px;
 }
 
 .block {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
 
 .block:last-of-type {
@@ -59,8 +64,22 @@
   /* color: var */
 }
 
+.block p:last-of-type {
+  margin-bottom: 60px;
+}
+
 .block p:first-of-type {
   margin-top: 20px;
+}
+
+/* .block:last-of-type p {
+  margin-bottom: 0;
+} */
+
+@media (max-width: 1366px) {
+  .details {
+    /* padding: 80px 40px; */
+  }
 }
 
 @media (max-width: 1024px) {
@@ -77,6 +96,10 @@
     align-items: flex-start;
   }
 
+  .details > div {
+    width: 100%;
+  }
+
   .products h2 {
     max-width: 100%;
   }
@@ -84,6 +107,10 @@
   .products img {
     margin-top: 60px;
     margin-left: 0;
+  }
+
+  .text h2 {
+    max-width: 75%;
   }
 
   .details {
@@ -102,6 +129,10 @@
 
   .products img {
     max-width: 80%;
+  }
+
+  .text h2 {
+    max-width: 90%;
   }
 
   .details p {
