--- a/styles/Team.module.css
+++ b/styles/Team.module.css
@@ -142,6 +142,7 @@
   height: calc(100% - 4px);
   background-color: rgba(2, 51, 93, 0.8);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   opacity: 0;
