--- a/styles/PolymerDistribution.module.css
+++ b/styles/PolymerDistribution.module.css
@@ -24,7 +24,8 @@
   font-size: 3rem;
   text-align: center;
   /* max-width: 75%; */
-  max-width: 900px;
+  /* max-width: 900px; */
+  max-width: 1000px;
   margin-bottom: 60px;
 }
 
