--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -133,6 +133,16 @@
   cursor: pointer;
 }
 
+.liPlaceholder {
+  height: 16.5px;
+}
+
+@media (max-width: 1024px) {
+  .liPlaceholder {
+    display: none;
+  }
+}
+
 .break {
   /* width: 100%; */
   height: 2px;
