--- a/styles/Endorsements.module.css
+++ b/styles/Endorsements.module.css
@@ -37,6 +37,10 @@
   width: 100px !important;
 }
 
+.formosa {
+  /* height: 150px; */
+}
+
 .endorsements h1 {
   margin-top: 80px;
   font-size: 3rem;
