--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -3,7 +3,7 @@
   padding: 80px 150px;
   display: flex;
   flex-direction: column;
-  max-width: 700px;
+  max-width: 850px;
   margin: 0 auto;
 }
 
@@ -21,7 +21,8 @@
 
 .contact p {
   font-weight: 300;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
 }
 
 .contact p a {
@@ -47,6 +48,10 @@
   width: calc(100% - 10px);
   margin-bottom: 40px;
   transition: border-color 0.2s ease-in-out;
+  font-size: 1.25rem;
+  color: var(--colBody);
+  font-family: 'Outfit', Arial, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 .form input:focus {
