--- a/styles/Endorsements.module.css
+++ b/styles/Endorsements.module.css
@@ -15,11 +15,51 @@
   align-items: center;
 }
 
-.grid {
+.carousel {
+  overflow: hidden;
+  width: calc(100% - 80px);
+  /* width: calc(50% - 80px); */
+}
+
+.carouselContainer {
+  display: flex;
+}
+
+.carouselSlide {
+  position: relative;
+  flex: 0 0 100%;
+  /* margin-left: 20px; */
+  min-height: 200px;
+  justify-content: center;
+  align-items: center;
+  /* margin-left: 20px; */
+  /* flex: 0 1 auto; */
+  /* display: flex;
+  justify-content: space-between; */
+}
+
+.carouselFlex {
+  height: 100%;
+  width: calc(100% - 40px);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* flex-wrap: wrap; */
+}
+
+.carouselSlide img {
+  width: 175px;
+  /* margin-right: 40px; */
+}
+
+.carouselSlide img:last-of-type {
+  margin-right: 0;
+}
+
+/* .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 100px;
-  /* width: calc(100% - 300px); */
   width: calc(100% - 80px);
   justify-items: center;
   align-items: center;
@@ -27,11 +67,7 @@
 
 .grid img {
   width: 150px;
-  /* max-height: 75px; */
-  /* height: 70%; */
-  /* max-height: 100px; */
-  /* height: 75px; */
-}
+} */
 
 .long, .inno {
   width: 100px !important;
@@ -42,7 +78,7 @@
 }
 
 .endorsements h1 {
-  margin-top: 80px;
+  margin-top: 40px;
   font-size: 3rem;
   color: var(--colButtonsHighlight);
   text-align: center;
@@ -51,31 +87,63 @@
 }
 
 @media (max-width: 1024px) {
-  .grid {
+  .carouselSlide img {
+    width: 150px;
+  }
+
+  .carousel {
+    width: 100%;
+  }
+  .carouselFlex {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 75px;
+    justify-items: center;
+    align-items: center;
+  }
+
+  /* .grid {
     grid-template-columns: repeat(2, 1fr);
   }
 
   .grid img {
     width: 150px;
-  }
+  } */
 
   .endorsements h1 {
     max-width: 75%;
+    margin-top: 100px;
   }
 }
 
 @media (max-width: 768px) {
+  .carouselSlide img {
+    width: 150px;
+  }
+
+  /* .carousel {
+    width: 100%;
+  }
+  .carouselFlex {
+    width: 100%;
+  } */
+
   .endorsements h1 {
     font-size: 2rem;
   }
 }
 
-@media (max-width: 600px) {
-  .grid {
+@media (max-width: 500px) {
+  .carouselSlide img {
+    width: 100px;
+  }
+
+  /* .grid {
     width: auto;
   }
 
   .grid img {
-    width: 100px;
-  }
+    width: 75px;
+  } */
 }
