--- a/styles/Endorsements.module.css
+++ b/styles/Endorsements.module.css
@@ -2,7 +2,8 @@
   width: 100%;
   /* padding: 80px 0; */
   /* padding: 150px 40px; */
-  padding: 150px 0;
+  /* padding: 150px 0; */
+  padding: 100px 0;
   background-color: white;
   /* display: flex;
   flex-direction: column;
@@ -78,7 +79,7 @@
 }
 
 .endorsements h1 {
-  margin-top: 40px;
+  margin-top: 80px;
   font-size: 3rem;
   color: var(--colButtonsHighlight);
   text-align: center;
