make sure email addresses in footer all line up

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -88,8 +88,13 @@
   /* margin: 0; */
   /* transform: translateY(-220%); */
   /* margin-top: -220%; */
-  margin-top: 43px;
+  /* margin-top: 43px; */
+  margin-top: 43.5px;
   margin-bottom: 0;
+}
+
+.emailChina {
+  transform: translateY(-0.25px);
 }
 
 .form * {
