--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -78,7 +78,8 @@
 
 .highlight {
   color: var(--colButtonsHighlight) !important;
-  max-width: 80% !important;
+  /* max-width: 100% !important; */
+  max-width: 100%;
 }
 
 @media (max-width: 1024px) {
