--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,9 +59,10 @@ input:focus {
   pointer-events: all !important;
 }
 
-/* .iubenda-tp-btn[data-tp-float]:not([data-tp-anchored]) {
-  margin: 32px !important;
-} */
+.iubenda-tp-btn[data-tp-float]:not([data-tp-anchored]) {
+  /* margin: 32px !important; */
+  transform: translate(13px, -35px) !important;
+}
 
 @media (min-height: 2010px) {
   #goToBottom {
